--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -14,144 +14,178 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:gravity="center">
 
-            <TextView
-                android:id="@+id/user1TextView"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/user_1"
-                android:textSize="20sp" />
+                android:layout_margin="24dp"
+                android:paddingVertical="7dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLight1"
-                android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="12dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/user1TextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/user_1"
+                        android:textSize="20sp"
+                        android:gravity="center"/>
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLight1"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/light_levels"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchtTemp1"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/temperatures"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedGreen1"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_green"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedRed1"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_red"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/light_levels"
-                tools:ignore="DuplicateSpeakableTextCheck" />
+                android:layout_margin="24dp"
+                android:paddingVertical="7dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchtTemp1"
-                android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="12dp"
+                    android:gravity="center">
+                    <TextView
+                        android:id="@+id/user2TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/user_2"
+                        android:textSize="20sp" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLight2"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/light_levels"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchtTemp2"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/temperatures"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedGreen2"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_green"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedRed2"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_red"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/temperatures"
-                tools:ignore="DuplicateSpeakableTextCheck" />
+                android:layout_margin="24dp"
+                android:paddingVertical="7dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="12dp"
+                    android:gravity="center">
+                    <TextView
+                        android:id="@+id/user3TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/user_3"
+                        android:textSize="20sp" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedGreen1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_green"
-                tools:ignore="DuplicateSpeakableTextCheck" />
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLight3"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/light_levels"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedRed1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_red"
-                tools:ignore="DuplicateSpeakableTextCheck" />
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchtTemp3"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:minHeight="48dp"
+                        android:text="@string/temperatures"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
 
-            <TextView
-                android:id="@+id/user2TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/user_2"
-                android:textSize="20sp" />
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedGreen3"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_green"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLight2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/light_levels"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchtTemp2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/temperatures"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedGreen2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_green"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedRed2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_red"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <TextView
-                android:id="@+id/user3TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/user_3"
-                android:textSize="20sp" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLight3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/light_levels"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchtTemp3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="1dp"
-                android:minHeight="48dp"
-                android:text="@string/temperatures"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedGreen3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_green"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchLedRed3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:minHeight="48dp"
-                android:text="@string/led_red"
-                tools:ignore="DuplicateSpeakableTextCheck" />
-
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchLedRed3"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="@string/led_red"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
