--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,15 @@
 
     <EditText
         android:id="@+id/host"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_domain_icon"
+        android:drawablePadding="12dp"
         android:hint="@string/host_hint"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
@@ -25,10 +30,15 @@
 
     <EditText
         android:id="@+id/port"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_antena_icon"
+        android:drawablePadding="12dp"
         android:hint="@string/port_hint"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
@@ -44,7 +54,12 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_person_icon"
+        android:drawablePadding="12dp"
         android:hint="@string/username_hint"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
@@ -60,7 +75,12 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:ems="10"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_lock_icon"
+        android:drawablePadding="12dp"
         android:hint="@string/password_hint"
         android:importantForAutofill="no"
         android:inputType="textPassword"
@@ -73,7 +93,7 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-20dp"
         android:backgroundTint="@color/background_botão"
